# cookbook

./: README.md
python-examples/: README.md
python-examples/auth-with-email-otp/: README.md  pyproject.toml
python-examples/auth-with-secret-otp/: pyproject.toml
python-examples/browser-sdk-showcase/: pyproject.toml
python-examples/browser-sdk-showcase/api/: click-until-exhausted.py  scroll-to-load-content.py
python-examples/browser-use/: pyproject.toml
python-examples/bs4/: pyproject.toml
python-examples/bs4/api/: details.py
python-examples/captcha-in-login/: pyproject.toml
python-examples/captcha-solving-basic/: pyproject.toml
python-examples/cdp-connection/: pyproject.toml
python-examples/computer-use/: pyproject.toml
python-examples/crawl4ai/: .gitignore  Intuned.jsonc  README.md  pyproject.toml
python-examples/crawl4ai/.parameters/api/content-selection/llm-based/: default.json
python-examples/crawl4ai/.parameters/api/deep-crawl/: examplecom.json
python-examples/crawl4ai/.parameters/api/multi-crawl/: default.json
python-examples/crawl4ai/.parameters/api/simple-crawl/: default.json
python-examples/crawl4ai/api/: deep-crawl.py
python-examples/crawl4ai/api/adaptive-crawl/: statistical.py
python-examples/crawl4ai/api/content-selection/: css-based.py
python-examples/crawl4ai/intuned-resources/jobs/: deep-crawl.job.jsonc  multi-crawl.job.jsonc
python-examples/crawl4ai/intuned-resources/jobs/content-selection/: llm-based.job.jsonc
python-examples/e-commerce-auth-scrapingcourse/: pyproject.toml
python-examples/e-commerce-nested/: pyproject.toml
python-examples/e-commerce-scrapingcourse/: pyproject.toml
python-examples/e-commerce-scrapingcourse/api/: list.py
python-examples/e-commerce-shopify/: pyproject.toml
python-examples/e-commerce-shopify/intuned-resources/jobs/: default.job.jsonc
python-examples/firecrawl/: pyproject.toml
python-examples/hacker-news/: .env.example  Intuned.jsonc  README.md  pyproject.toml  run_local.py
python-examples/hacker-news/.parameters/api/daily-digest/: default.json
python-examples/hacker-news/api/: daily-digest.py  scrape-front-page.py
python-examples/hacker-news/intuned-resources/jobs/: daily-digest.job.jsonc  scrape-front-page.job.jsonc
python-examples/hacker-news/utils/: __init__.py  extract.py  hn.py  llm.py  telegram.py
python-examples/hybrid-automation/: pyproject.toml
python-examples/native-crawler/: README.md  pyproject.toml
python-examples/network-interception/: pyproject.toml
python-examples/playwright-basics/: pyproject.toml
python-examples/quick-recipes/: pyproject.toml
python-examples/rpa-auth-example/: pyproject.toml
python-examples/rpa-example/: pyproject.toml
python-examples/rpa-forms-example/: pyproject.toml
python-examples/scrapy/: pyproject.toml
python-examples/setup-hooks/: pyproject.toml
python-examples/stagehand/: pyproject.toml
python-examples/starter/: pyproject.toml
python-examples/starter-auth/: pyproject.toml
python-examples/starter-crawl4ai/: Intuned.jsonc  README.md  pyproject.toml
python-examples/starter-network-interception/: Intuned.jsonc  README.md  pyproject.toml
python-examples/starter-network-interception/.parameters/api/sample-capture-api/: default.json
python-examples/starter-network-interception/api/: sample-capture-api.py
python-examples/starter-network-interception/intuned-resources/jobs/: sample-capture-api.job.jsonc
python-examples/starter-rpa/: .gitignore  Intuned.jsonc  README.md  pyproject.toml
python-examples/starter-rpa/.parameters/api/sample-book-consultation/: default.json
python-examples/starter-rpa/api/: sample-book-consultation.py
python-examples/starter-scrapy/: Intuned.jsonc  README.md  pyproject.toml
python-examples/starter-scrapy/.parameters/api/sample-scrapy-crawler/: default.json
python-examples/starter-scrapy/api/: sample-scrapy-crawler.py
python-examples/starter-scrapy/intuned-resources/jobs/: sample-scrapy-crawler.job.jsonc
python-examples/starter-shopify/: Intuned.jsonc  README.md  pyproject.toml
python-examples/starter-shopify/.parameters/api/sample-scrape-product/: default.json
python-examples/starter-shopify/api/: sample-scrape-product.py
python-examples/starter-shopify/intuned-resources/jobs/: sample-scrape-product.job.jsonc
python-examples/starter-stagehand/: Intuned.jsonc  README.md  pyproject.toml
typescript-examples/: README.md
typescript-examples/auth-with-email-otp/: README.md  package.json
typescript-examples/auth-with-secret-otp/: package.json
typescript-examples/browser-sdk-showcase/: package.json
typescript-examples/captcha-in-login/: package.json
typescript-examples/captcha-solving-basic/: package.json
typescript-examples/cdp-connection/: package.json
typescript-examples/computer-use/: package.json
typescript-examples/e-commerce-auth-scrapingcourse/: package.json
typescript-examples/e-commerce-nested/: package.json
typescript-examples/e-commerce-scrapingcourse/: package.json
typescript-examples/e-commerce-shopify/: package.json
typescript-examples/hybrid-automation/: package.json
typescript-examples/jsdom/: package.json
typescript-examples/native-crawler/: README.md  package.json
typescript-examples/network-interception/: package.json
typescript-examples/rpa-auth-example/: package.json
typescript-examples/rpa-example/: package.json
typescript-examples/rpa-forms-example/: package.json
typescript-examples/setup-hooks/: package.json
typescript-examples/stagehand/: package.json
typescript-examples/starter/: package.json
typescript-examples/starter-auth/: package.json
typescript-examples/starter-jsdom/: Intuned.jsonc  README.md  package.json
typescript-examples/starter-network-interception/: .env.example  Intuned.jsonc  README.md  package.json
typescript-examples/starter-rpa/: README.md  package.json
typescript-examples/starter-shopify/: Intuned.jsonc  README.md  package.json  tsconfig.json
typescript-examples/starter-stagehand/: .env.example  Intuned.jsonc  README.md  package.json  tsconfig.json
(+38 files in other folders)
