[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "captcha-solving-basic-example"
version = "0.0.1"
description = "Automation project to demonstrate our captcha solving and stealth mode capabilities"
authors = [{ name = "Intuned", email = "service@intunedhq.com" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
keywords = [
    "Python",
    "captcha-solving",
]
dependencies = [
    "playwright==1.56",
    "intuned-runtime==1.3.28",
    "intuned-browser==0.1.17",
]

[tool.uv]
package = false
