[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "computer-use"
version = "0.0.1"
description = "AI-powered browser automation with Anthropic, OpenAI, Gemini, and Browser Use"
authors = [{ name = "Intuned", email = "service@intunedhq.com" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
keywords = [
    "Python",
    "intuned-browser-sdk",
]
dependencies = [
    "playwright==1.56",
    "intuned-runtime==1.3.33",
    "intuned-browser==0.1.17",
    "anthropic~=0.75.0",
    "python-dateutil~=2.9.0",
    "httpx~=0.28.1",
    "stagehand~=0.5.7",
    "browser-use==0.11.2",
]

[tool.uv]
package = false
