[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ecommerce"
version = "0.0.1"
description = "E-commerce automation that extracts product details from a list of products"
authors = [{ name = "Intuned", email = "service@intunedhq.com" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
keywords = [
    "Python",
    "intuned-browser-sdk",
]
dependencies = [
    "playwright==1.56",
    "intuned-runtime==1.3.29",
    "intuned-browser==0.1.17",
    "pydantic==2.10.6",
]

[tool.uv]
package = false
