[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simple-firecrawl"
version = "0.0.1"
description = "Firecrawl-compatible API using crawl4ai - open-source replacement"
authors = [{ name = "Intuned", email = "service@intunedhq.com" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
keywords = [
    "Python",
    "intuned-browser-sdk",
    "firecrawl",
    "crawl4ai",
]
dependencies = [
    "playwright==1.56",
    "intuned-runtime==1.3.32",
    "intuned-browser==0.1.17",
    "crawl4ai==0.8.6",
    "pytz>=2024.1",
    "tavily-python>=0.5.0",
]

[tool.uv]
package = false
