[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hacker-news"
version = "0.0.1"
description = "Scrape the Hacker News front page stories on a daily schedule"
authors = [{ name = "Intuned", email = "service@intunedhq.com" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
keywords = [
    "Python",
    "intuned-browser-sdk",
    "hacker-news",
    "scraping",
]
dependencies = [
    "playwright==1.56",
    "intuned-runtime==1.3.33",
    "intuned-browser==0.1.17",
    "httpx~=0.28.1",
]

[tool.uv]
package = false
