[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "book-consultations"
version = "0.0.1"
description = "Booking automation to book a consultation with a consultant and list the consultations"
authors = [{ name = "Intuned", email = "service@intunedhq.com" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
keywords = [
    "Python",
    "intuned-browser-sdk",
]
dependencies = [
    "playwright==1.56",
    "intuned-runtime==1.3.33",
    "intuned-browser==0.1.17",
    "pydantic[email]==2.10.6",
]

[tool.uv]
package = false
