[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurace-form-filler"
version = "0.0.1"
description = ""
authors = [{ name = "Intuned", email = "service@intunedhq.com" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
keywords = [
    "Python",
    "AI",
    "Stagehand",
    "intuned-browser-sdk",
    "intuned-runtime-sdk",
    "intuned-runtime-sdk-setup-context-hook",
]
dependencies = [
    "playwright==1.56",
    "intuned-runtime==1.3.31",
    "stagehand==3.5.0",
    "intuned-browser==0.1.17",
]

[tool.uv]
package = false
