[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scrapy-example"
version = "0.0.1"
description = "Scrapy example to scrape quotes from the quotes.toscrape.com website"
authors = [{ name = "Intuned", email = "service@intunedhq.com" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
keywords = [
    "Python",
    "scrapy",
    "intuned-browser-sdk",
]
dependencies = [
    "playwright==1.56",
    "intuned-runtime==1.3.31",
    "intuned-browser==0.1.17",
    "pydantic>=2.10.6",
    "scrapy>=2.13.4",
]

[tool.uv]
package = false
