[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "setup-hooks"
version = "0.0.1"
description = "Demonstrates setup hooks usage in Intuned"
authors = [{ name = "Intuned", email = "service@intunedhq.com" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
keywords = [
    "Python",
]
dependencies = [
    "playwright==1.56",
    "intuned-runtime==1.3.30",
    "intuned-browser==0.1.17",
    "pydantic>=2.0.0",
]

[tool.uv]
package = false
