[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "starter-shopify"
version = "0.0.1"
description = "Minimal Shopify product scraper starter on Intuned"
authors = [{ name = "Intuned", email = "service@intunedhq.com" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
keywords = [
    "Python",
    "intuned-browser-sdk",
    "shopify",
    "starter",
]
dependencies = [
    "playwright==1.56",
    "intuned-runtime==1.3.25",
    "intuned-browser==0.1.17",
]

[tool.uv]
package = false
